Fix bug with numbers not overlapping knight icon

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -3,9 +3,14 @@
 }
 
 .cell {
+    position: relative;
     width: var(--cell-width);
     height: var(--cell-width);
     box-sizing: border-box;
+}
+
+.cell > * {
+    position: absolute;
 }
 
 .board {
